--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://pointfirestorm.github.io/"
+baseURL = "https://pointfirestorm.github.io"
 languageCode = "en-us"
 pygmentsUseClasses = true
 relativeURLs = true
