--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseURL = "https://pointfirestorm.github.io/quartz"
 languageCode = "en-us"
 pygmentsUseClasses = true
 relativeURLs = true
+canonifyURLS = true
 disablePathToLower = true
 ignoreFiles = [
     "/content/templates/*",
